Removed unused onclick

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             Forecast for: <span id="place"></span>
             <br/>
             <button id="forecastFromMap" type="submit" class="btn btn-primary" 
-            data-bs-dismiss="modal" onclick="showForecast(document.getElementById('place').textContent)">
-            See forecast</button>
+            data-bs-dismiss="modal">See forecast</button>
           </div>
         </div>
       </div>
